--- a/jason_frater_cv.Rmd
+++ b/jason_frater_cv.Rmd
@@ -14,7 +14,7 @@ Aside
 ================================================================================
 
 
-![Jason Frater](https://avatars.githubusercontent.com/jasonfrater){width=40%}
+![Jason Frater](https://avatars.githubusercontent.com/jasonfrater){width=100%}
 
 
 Contact Info {#contact}
@@ -22,7 +22,10 @@ Contact Info {#contact}
 
 - <i class="fa fa-envelope"></i> jason@frateholding.com
 - <i class="fa fa-github"></i> [github.com/jasonfrater](https://github.com/jasonfrater)
+- <i class="fa fa-linkedin"></i> [Jason Frater](https://www.linkedin.com/in/jason-frater-2b683b3b/)
 - <i class="fa fa-phone"></i> +1 234-567-890
+- <i class="fa fa-map-marker"></i> [Brisbane](https://www.google.com/maps/place/Brisbane+QLD/@-27.466887,153.0141302,14z/data=!4m5!3m4!1s0x6b91579aac93d233:0x402a35af3deaf40!8m2!3d-27.4704528!4d153.0260341)
+- <i class="fa fa-car"></i> Queensland License: HR,R
 - For more information, please contact me via email.
 
 
@@ -53,10 +56,8 @@ Jason Frater {#title}
 
 ### Currently undertaking contracting positions. 
 
-Please note that this is a *real* resume, and I'm really looking for a PhD
-student position at the moment. I made this resume because Yihui asked me
-if I'd like to test the **pagedown** package with my resume. If you are
-interested in my background and skills, please feel free to contact me.
+I am a highly motivated professional engineer with proven success in a number of demanding environments. In my previous working roles, I have demonstrated high personal integrity and strong communication and interpersonal skills. I am a fast and adaptive learner always searching for new challenges and experiences.
+Previous roles I have demonstrated that I am a dependable, reliable and know that these characteristics are crucial in creating a cohesive work environment. These roles have also enabled me to develop a great understanding of operational strategy and lateral decision making that is practicable and always adaptive to operational needs.
 
 
 Education {data-icon=graduation-cap data-concise=true}
